updated the homepage with a new div and changed the learn more button to my cv

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </p>
         
         <div class="learn-button">
-          <a href="./about.html">Learn more</a>
+          <a href="./about.html">My CV</a>
         </div>
         </div>
       </div>
@@ -315,6 +315,10 @@
           <input type="text" id="email" placeholder="Enter email address" required>
           <button class="email-button">Subscribe</button>
         </form>
+      </div>
+
+      <div class="patronage">
+        <P class="patro-text">Looking forward to your patronage</P>
       </div>
     </section>
   </main>
